# indy-technical-test-rs

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE.md  README.md
.github/workflows/: rust.yml
etc/http/: promocode.http
promocode-client/: Cargo.toml
promocode-models/: Cargo.toml
promocode-models/src/: lib.rs
promocode-models/src/data/: _shadow.rs  avantage.rs  mod.rs  promocode.rs  restriction.rs  temp.rs
promocode-models/src/extensions/: mod.rs  vec_restriction.rs
promocode-models/src/promocode/: avantage.rs  mod.rs  restriction.rs  restrictions.rs  temp.rs
promocode-models/src/promocode_request/: arguments.rs  meteo.rs  mod.rs
promocode-models/src/promocode_response/: mod.rs  reason.rs  status.rs
promocode-models/src/req/: mod.rs  promocode_request.rs  promocode_request_shadow.rs
promocode-models/src/res/: mod.rs  promocode_accepted.rs  promocode_accepted_shadow.rs  promocode_denied.rs  promocode_denied_shadow.rs
promocode-models/tests/: data_promocode.rs  data_promocode_accepted.rs  data_promocode_denied.rs  data_promocode_request.rs  extenstions_vec_restriction.rs
promocode-server/: Cargo.toml
promocode-server/src/: cli.rs  db.rs  lib.rs  main.rs  open_weather_sdk.rs
promocode-server/src/db/: mod.rs
promocode-server/src/server/: mod.rs
promocode-server/src/server/routes/: mod.rs  promocode.rs  promocode_list.rs
promocode-server/tests/: db.rs
promocode-util/: Cargo.toml
promocode-util/src/validate_type/: mod.rs  number.rs  sequence.rs  string.rs
promocode-util/src/validate_type/error/: is_empty_or_blank_string.rs  is_empty_sequence.rs  mod.rs  out_of_bound.rs
