[package]
name = "promocode-client"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[dependencies]
clap = { version = "4.4", features = ["derive"] }

promocode-models = { path = "../promocode-models" }
promocode-util = { path = "../promocode-util" }
