[package]
name = "promocode-server"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
actix-web = "4.5"

clap = { version = "4.4", features = ["derive", "env"] }

env_logger = "0.11"
log = "0.4"

openweather_sdk = "0.1.3"

promocode-models = { path = "../promocode-models" }
promocode-util = { path = "../promocode-util" }
