[package]
name = "promocode-server"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }

env_logger = "0.11"
log = "0.4"

ntex = { version = "2.3", features = ["tokio"] }

openweather_sdk = "0.1"

promocode-models = { path = "../promocode-models" }
promocode-util = { path = "../promocode-util" }
